udpated spring version, kafka clients version and lombok